[package]
name = "dydx-v3-blocking"
version = "1.0.0"
edition = "2021"
authors = ["Sharaddition"]
description = "Blocking Rust SDK for dYdX v3 API"
license = "Apache License"
keywords = ["sdk", "dydx", "api"]
homepage = "https://docs.dydx.exchange/"
repository = "https://github.com/Sharaddition/dydx-v3-blocking"
readme = "README.md"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.16.4", features = ["auto-initialize"]}
hex = "0.4.3"
hex-literal = "0.3"
tokio = { version= "1", features = ["full"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
uuid = { version = "0.8", features = ["v5"] }
sha2 = "0.10.2"
hmac = "0.12.1"
chrono = "0.4"
base64 = "0.13.0"
readonly = "0.2.0"
rand = "0.8.5"

[dev-dependencies]
speculate = "0.1.2"

[profile.release]
debug = 1
strip = "symbols"